tests/ui/numbers-arithmetic/not-suggest-float-literal.stderr
error[E0277]: cannot add `{float}` to `u8`
  --> $DIR/not-suggest-float-literal.rs:2:7
   |
LL |     x + 100.0
   |       ^ no implementation for `u8 + {float}`
   |
   = help: the trait `Add<{float}>` is not implemented for `u8`
   = help: the following other types implement trait `Add<Rhs>`:
             <u8 as Add>
             <u8 as Add<&u8>>
             <&'a u8 as Add<u8>>
             <&u8 as Add<&u8>>

error[E0277]: cannot add `&str` to `f64`
  --> $DIR/not-suggest-float-literal.rs:6:7
   |
LL |     x + "foo"
   |       ^ no implementation for `f64 + &str`
   |
   = help: the trait `Add<&str>` is not implemented for `f64`
   = help: the following other types implement trait `Add<Rhs>`:
             <f64 as Add>
             <f64 as Add<&f64>>
             <&'a f64 as Add<f64>>
             <&f64 as Add<&f64>>

error[E0277]: cannot add `{integer}` to `f64`
  --> $DIR/not-suggest-float-literal.rs:11:7
   |
LL |     x + y
   |       ^ no implementation for `f64 + {integer}`
   |
   = help: the trait `Add<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Add<Rhs>`:
             <f64 as Add>
             <f64 as Add<&f64>>
             <&'a f64 as Add<f64>>
             <&f64 as Add<&f64>>

error[E0277]: cannot subtract `{float}` from `u8`
  --> $DIR/not-suggest-float-literal.rs:15:7
   |
LL |     x - 100.0
   |       ^ no implementation for `u8 - {float}`
   |
   = help: the trait `Sub<{float}>` is not implemented for `u8`
   = help: the following other types implement trait `Sub<Rhs>`:
             <u8 as Sub>
             <u8 as Sub<&u8>>
             <&'a u8 as Sub<u8>>
             <&u8 as Sub<&u8>>

error[E0277]: cannot subtract `&str` from `f64`
  --> $DIR/not-suggest-float-literal.rs:19:7
   |
LL |     x - "foo"
   |       ^ no implementation for `f64 - &str`
   |
   = help: the trait `Sub<&str>` is not implemented for `f64`
   = help: the following other types implement trait `Sub<Rhs>`:
             <f64 as Sub>
             <f64 as Sub<&f64>>
             <&'a f64 as Sub<f64>>
             <&f64 as Sub<&f64>>

error[E0277]: cannot subtract `{integer}` from `f64`
  --> $DIR/not-suggest-float-literal.rs:24:7
   |
LL |     x - y
   |       ^ no implementation for `f64 - {integer}`
   |
   = help: the trait `Sub<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Sub<Rhs>`:
             <f64 as Sub>
             <f64 as Sub<&f64>>
             <&'a f64 as Sub<f64>>
             <&f64 as Sub<&f64>>

error[E0277]: cannot multiply `u8` by `{float}`
  --> $DIR/not-suggest-float-literal.rs:28:7
   |
LL |     x * 100.0
   |       ^ no implementation for `u8 * {float}`
   |
   = help: the trait `Mul<{float}>` is not implemented for `u8`
   = help: the following other types implement trait `Mul<Rhs>`:
             <u8 as Mul>
             <u8 as Mul<&u8>>
             <&'a u8 as Mul<u8>>
             <&u8 as Mul<&u8>>

error[E0277]: cannot multiply `f64` by `&str`
  --> $DIR/not-suggest-float-literal.rs:32:7
   |
LL |     x * "foo"
   |       ^ no implementation for `f64 * &str`
   |
   = help: the trait `Mul<&str>` is not implemented for `f64`
   = help: the following other types implement trait `Mul<Rhs>`:
             <f64 as Mul>
             <f64 as Mul<&f64>>
             <&'a f64 as Mul<f64>>
             <&f64 as Mul<&f64>>

error[E0277]: cannot multiply `f64` by `{integer}`
  --> $DIR/not-suggest-float-literal.rs:37:7
   |
LL |     x * y
   |       ^ no implementation for `f64 * {integer}`
   |
   = help: the trait `Mul<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Mul<Rhs>`:
             <f64 as Mul>
             <f64 as Mul<&f64>>
             <&'a f64 as Mul<f64>>
             <&f64 as Mul<&f64>>

error[E0277]: cannot divide `u8` by `{float}`
  --> $DIR/not-suggest-float-literal.rs:41:7
   |
LL |     x / 100.0
   |       ^ no implementation for `u8 / {float}`
   |
   = help: the trait `Div<{float}>` is not implemented for `u8`
   = help: the following other types implement trait `Div<Rhs>`:
             <u8 as Div>
             <u8 as Div<NonZeroU8>>
             <u8 as Div<&u8>>
             <&'a u8 as Div<u8>>
             <&u8 as Div<&u8>>

error[E0277]: cannot divide `f64` by `&str`
  --> $DIR/not-suggest-float-literal.rs:45:7
   |
LL |     x / "foo"
   |       ^ no implementation for `f64 / &str`
   |
   = help: the trait `Div<&str>` is not implemented for `f64`
   = help: the following other types implement trait `Div<Rhs>`:
             <f64 as Div>
             <f64 as Div<&f64>>
             <&'a f64 as Div<f64>>
             <&f64 as Div<&f64>>

error[E0277]: cannot divide `f64` by `{integer}`
  --> $DIR/not-suggest-float-literal.rs:50:7
   |
LL |     x / y
   |       ^ no implementation for `f64 / {integer}`
   |
   = help: the trait `Div<{integer}>` is not implemented for `f64`
   = help: the following other types implement trait `Div<Rhs>`:
             <f64 as Div>
             <f64 as Div<&f64>>
             <&'a f64 as Div<f64>>
             <&f64 as Div<&f64>>

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0277`.
